--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-Hello!!！
-I'm Jiongci, this is my personal website!
-So glad you find here!
+<p>Hello!!<p>
+<p>I'm Jiongci, this is my personal website!<p>
+<p>So glad you find here!<p>
