--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<p>Hello!!<p>
-<p>I'm Jiongci, this is my personal website!<p>
-<p>So glad you find here!<p>
+<p>Hello!</p>
+<p>I'm Jiongci, this is my personal website! </p>
+<p>So glad you find here! </p>
